--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.thymeleaf.cache=false
 spring.datasource.url=jdbc:mysql://localhost/festa?useTimezone=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
